# auto-room

./: .gitignore  CMakeLists.txt  README.md  gui-launcher  jarvis2.py  manager  raspberry-dependencies-install  raspberry-py-install  token-check  windows-run.bat
backup/: auto-room  jarvis.py  main.cpp
gui/src/: CMakeLists.txt  avg.json  dataManager.cpp  index.html  info-fetch.cpp  liveStatFetch.cpp  liveTotal.json  main.js  package-lock.json  package.json  preload.js  script.js  styles.css
gui/src/include/: dataManager.hpp  info-fetch.hpp  liveStatFetch.hpp
jarvis/: jarvis-transcripe.cpp
source/: logic-simulation.cpp
src/: gpt-prompt-tts.cpp  logic-simulation.cpp  main.cpp
src/python/: cleanText.py  deepseek-r1.py  jarvis-nomic.py  jarvis.py  stt.py  tts.py
tui-manager/: CMakeLists.txt
tui-manager/src/: actions.cpp  main.cpp  manager.cpp  os_detect.cpp  windows-cli.cpp
tui-manager/src/include/: actions.hpp  manager.hpp  os_detect.hpp
